Add language interceptor
